# social-streaming-application

./: .env.example  .env.kafka  .gitignore  Dockerfile.kafka  Dockerfile.spark  README.md  docker-compose.yml  output.txt  pyproject.toml  requirements.txt
app/: README.md  config.py  flow.py
app/clients/: reddit_client.py  schema.py
app/kafka/: publisher.py
app/kibana/: create_index.py  inject.py
app/spark/: offline.py  streaming.py
app/spark/processing/: cleaner.py  embedder.py  keyword_extractor.py
app/spark/utils/: spark.py
app/task/: reddit.py  state.py
config/: spark_config.yaml
consumer/: consumer.py
data/processed/: .part-00000-4a10aefc-1476-4be2-ba61-db9a8f56eec7-c000.json.crc  part-00000-0b3cee1d-e0a3-4407-ade8-d6548df15c7c-c000.json  part-00000-4a10aefc-1476-4be2-ba61-db9a8f56eec7-c000.json
data/raw/: sample.json
docker/: Dockerfile.spark  docker-compose.yml
docs/: API.md  DOC_RUN.md  KIBANA.md  RUN.md
scripts/: code.sh
src/: main.py  main_kafka.py
src/kibana/: README.md
src/ultis/: spark.py
